# python-copier-template

./: .pre-commit-config.yaml  README.md  copier.yml
.github/workflows/: deployment-check.yml  pre-commit-check.yml
copier-template-files/: .gitignore  .pre-commit-config.yaml  pyproject.toml
copier-template-files/src/{{ package_name }}/: {{ package_name }}.py
